tests/type-check/bad/tuple-length-binding.arr
x = {1;2;3}

{y;z} = x

